--- a/NEWS
+++ b/NEWS
@@ -1,9 +1,23 @@
 ** Version 1.1
+  - Bug fix while exiting (in result_changed function)
+  - Better cli arguments checking
+  - Bug importing cfdict.u8 due to cfdict bad UTF-8 encoding (CFDICT related)
+  - Improvement of Pinyin parser
+  - Improvement of Zhuyin parser (forgot ㄇㄜ/me)
+  - Succefully tested with CC-CEDICT and CFDICT
+  - The pinyin/zhuyin table has been put in a different file for clarity
 
-   - Bug fix while exiting (in result_changed function)
-   - Better cli arguments checking
-   - Bug importing cfdict.u8 due to cfdict bad UTF-8 encoding
-   - Improving of Pinyin parser
-   - Improving of Zhuyin parser (forgot me/ㄇㄜ)
-   - Succefully tested with CC-CEDICT and CFDICT
-   - The pinyin/zhuyin table has been put in a different file for clarity
+** Version 1.0
+  - Ported to Python3
+	- Ported to GTK+3
+	- Brackets added arround pronounciation in order to help distinguishing them
+	- Default GUI language: English (longterm: localization)
+	- The search engine has been improved (it becomes case insensitive too)
+	- The results selection speed has been greatly improved
+	- The option windows button has been renamed along with the search button
+
+** Version 0.9
+  - First public version
+  - Options window added
+  - The search engine allows barely requests
+  - Search button added
