--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,6 @@
 ** Version 1.3
    - Fixed issue when clicing "Nothing found." in the results list.
+   - Fixed issue when selecting a candidat while the list has been re-ordered.
 
 ** Version 1.2
    - Fixed issue when changing search query
