--- a/NEWS
+++ b/NEWS
@@ -1,13 +1,14 @@
 ** Version 1.3
    - Fixed issue when clicing "Nothing found." in the results list.
    - Fixed issue when selecting a candidat while the list has been re-ordered.
-   Now, the pinyin pronunciation is written with nice looking unicode tones.
-   Zhudi now saves and read a configuration file that contains the prefered
-    values set in the option windows! (great improvement)
-   Zhudi nows displays some table-based input methods for each entry:
+   - Now, the pinyin pronunciation is written with nice looking unicode tones.
+   - Zhudi now saves and read a configuration file that contains the prefered
+     values set in the option windows! (great improvement)
+   - Zhudi nows displays some table-based input methods for each entry:
          - Array30 (行列)
          - Cangjie5 (倉頡5)
          - Wubi86 (五筆86)
+   - Fixed issue occuring when changing query.
 
 ** Version 1.2
    - Fixed issue when changing search query
