--- a/NEWS
+++ b/NEWS
@@ -5,10 +5,11 @@
    - Zhudi now saves and read a configuration file that contains the prefered
      values set in the option windows! (great improvement)
    - Zhudi nows displays some table-based input methods for each entry:
-         - Array30 (行列)
-         - Cangjie5 (倉頡5)
-         - Wubi86 (五筆86)
+     - Array30 (行列)
+     - Cangjie5 (倉頡5)
+     - Wubi86 (五筆86)
    - Fixed issue occuring when changing query.
+   - Better separation between core/gui/starting functions.
 
 ** Version 1.2
    - Fixed issue when changing search query
