--- a/NEWS
+++ b/NEWS
@@ -10,7 +10,7 @@
      - Wubi86 (五筆86)
    - Fixed issue occuring when changing query.
    - Better separation between core/gui/starting functions.
-   - GUI refactoring
+   - GUI refactoring: tabs.
 
 ** Version 1.2
    - Fixed issue when changing search query
