--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+** Version 1.4
+   Mainly thanks to moorchegue:
+   - New CLI interface (called zhu).
+   - Code clean-up, and usage of setuptools.
+   - Zhudi is now a proper python (3) package.
+   - The repository should be tagged, and now is (starting with this version)
+
 ** Version 1.3
    - Fixed issue when clicing "Nothing found." in the results list.
    - Fixed issue when selecting a candidat while the list has been re-ordered.
