--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,7 @@
 ** Version 1.6 (not released yet)
    #4: input language is now auto-detected
-   - Code cleanup (pylint results vastly improved)
+   - Code cleanup (pylint results vastly improved, and some refactoring)
+   #5: options are now in their own tab (since they are global).
 
 ** Version 1.5
    #1: initial dictionary splitting didn't work (new tests for that)
